<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header_default" />

    <TextView
        android:id="@+id/tvCheckOutTitle"
        style="@style/text_title_book_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:text="@string/delivering_address" />

    <LinearLayout
        android:id="@+id/btnChangeAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button_dark_r8"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="14dp">

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:lines="3"
            android:maxLines="4"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/text_color_button_dark" />

        <Space
            android:layout_width="56dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:lines="3"
            android:maxLines="4"
            android:text="@string/change"
            android:textColor="@color/text_b8" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnAddNewAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button_light"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:text="@string/add_a_new_delivery_address" />

    <TextView
        android:id="@+id/tvCheckPaymentMethodTitle"
        style="@style/text_title_book_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:gravity="start"
        android:text="@string/payment_method" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnRadioCreditCard"
            style="@style/button_icon_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_radio_button" />

        <TextView
            android:id="@+id/tvCreditCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/credit_card"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnExpandCreditCard"
            style="@style/button_icon_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_expand_more" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnRadioCOD"
            style="@style/button_icon_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_radio_button" />

        <TextView
            android:id="@+id/tvCOD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:text="@string/cash_on_delivery"
            android:textSize="16sp" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/btnProcessPayment"
        style="@style/text_button_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_button_dark"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/checkout_pay_s" />
</LinearLayout>