<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header_default" />

    <TextView
        android:id="@+id/tvBookDetailTitle"
        style="@style/text_title_book_types"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:text="@string/txt_screen_login_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivBooDetailCover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintDimensionRatio="138:214"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBookDetailTitle"
        app:layout_constraintWidth_percent="0.383"
        app:shapeAppearanceOverlay="@style/shape_rounded_8" />

    <TextView
        android:id="@+id/tvBookDetailAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/txt_book_detail_author_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBooDetailCover"
        app:layout_constraintTop_toTopOf="@+id/ivBooDetailCover" />

    <TextView
        android:id="@+id/tvBookCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_book_detail_category_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBooDetailCover"
        app:layout_constraintTop_toBottomOf="@+id/tvBookDetailAuthor" />

    <TextView
        android:id="@+id/tvBookRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_book_detail_rating_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBooDetailCover"
        app:layout_constraintTop_toBottomOf="@+id/tvBookCategory" />

    <TextView
        android:id="@+id/tvBookPricing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_book_detail_pricing_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBooDetailCover"
        app:layout_constraintTop_toBottomOf="@+id/tvBookRating" />

    <LinearLayout
        android:id="@+id/btnFavorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_button_light"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBooDetailCover"
        app:layout_constraintTop_toBottomOf="@+id/tvBookPricing"
        app:layout_constraintVertical_bias="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:text="@string/favorite"
            android:textColor="@color/text_color_button_light" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_heart_unfavorite" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnAddToCart"
        style="@style/text_button_dark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_button_dark"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/add_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBooDetailCover"
        app:layout_constraintTop_toBottomOf="@+id/btnFavorite"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/tvTitleDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="start"
        android:text="@string/description_colon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBooDetailCover" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:gravity="start|top"
        android:paddingBottom="8dp"
        android:scrollbars="vertical"
        android:text="@string/lorem_ipsum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>