<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header_default" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="56dp"
        android:gravity="start"
        android:text="@string/txt_screen_login_description"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etUsername"
        style="@style/text_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_input_text"
        android:hint="@string/username_email"
        android:paddingHorizontal="12dp"
        android:paddingVertical="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPassword"
        style="@style/text_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_input_text"
        android:drawableEnd="@drawable/ic_eye_close"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <TextView
        android:id="@+id/btnGetStarted"
        style="@style/text_button_dark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button_dark"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:fontFamily="@font/open_sans_regular"
        android:paddingHorizontal="6dp"
        android:paddingVertical="4dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetStarted" />

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:fontFamily="@font/open_sans_regular"
        android:paddingHorizontal="6dp"
        android:paddingVertical="4dp"
        android:text="@string/new_member_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>