<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header_default" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartFm_rvCartItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:fadeScrollbars="true"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_cart" />

    <TextView
        style="@style/text_title_book_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:gravity="start"
        android:text="@string/order_summary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subtotal"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cartFm_tvPriceSubtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_s"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shipping"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cartFm_tvPriceShipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_s"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="14dp"
        android:background="@color/color_main_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cartFm_tvPriceTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_s"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnProcessPayment"
        style="@style/text_button_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_button_dark"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/checkout_pay_s" />
</LinearLayout>