<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:text="@string/account"
        android:textSize="16sp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivAccountAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="42dp"
        android:scaleType="center"
        android:src="@drawable/img_avatar_default"
        app:shapeAppearanceOverlay="@style/shape_circle" />

    <LinearLayout
        android:id="@+id/lnlAccountUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_input_text"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="14dp"
        android:paddingVertical="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:text="@string/username_colon" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="null"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="start|center_vertical"
            android:maxLines="2"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/text_color_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlAccountEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_input_text"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="14dp"
        android:paddingVertical="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:text="@string/email_colon" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="null"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="start|center_vertical"
            android:inputType="textEmailAddress"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/text_color_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlAccountPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_input_text"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="14dp"
        android:paddingVertical="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:text="@string/password_colon" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="null"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="start|center_vertical"
            android:inputType="textPassword"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/text_color_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlAccountAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_input_text"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="14dp"
        android:paddingVertical="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:text="@string/address_colon" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="null"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="start|center_vertical"
            android:lines="3"
            android:maxLines="4"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/text_color_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnEdit"
            style="@style/text_button_dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_dark_r8"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/edit" />

        <Space
            android:layout_width="12dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/btnLogOut"
            style="@style/text_button_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_light_r8"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/edit" />
    </LinearLayout>
</LinearLayout>